# GameCAD

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  commands.rs  entity.rs  input.rs  main.rs  settings.rs  theme.rs  types.rs
app/src/input_handling/: command_palette.rs  mod.rs  shortcuts.rs
app/src/panels/: bottom.rs  inspector.rs  mod.rs  outliner.rs  status_bar.rs  toolbar.rs  tree_row.rs
app/src/state/: entity.rs  mod.rs  settings.rs  types.rs
app/src/viewport/: axis_indicator.rs  camera_input.rs  context_menu.rs  gizmo.rs  gpu_mesh.rs  grid.rs  mod.rs  objects.rs  picking.rs  projection.rs  styles.rs
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset_type.rs  database.rs  importer.rs  lib.rs  metadata.rs  thumbnail.rs
crates/core/: Cargo.toml
crates/core/src/: commands.rs  ecs.rs  events.rs  id.rs  lib.rs  math.rs  time.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: lib.rs  panel.rs  property.rs  widgets.rs
crates/materials/: Cargo.toml
crates/materials/src/: lib.rs  library.rs  material.rs
crates/materials/src/compiler/: assemble.rs  codegen.rs  mod.rs
crates/materials/src/editor/: canvas.rs  menus.rs  mod.rs  state.rs
crates/materials/src/graph/: connection.rs  graph.rs  mod.rs  node.rs  types.rs  validate.rs
crates/modeling/: Cargo.toml
crates/modeling/src/: half_edge.rs  lib.rs  selection.rs
crates/modeling/src/csg/: boolean.rs  bsp.rs  mod.rs  types.rs
crates/modeling/src/operations/: delete.rs  extrude.rs  helpers.rs  mod.rs  modify.rs  subdivide.rs  transform.rs
crates/modeling/src/primitives/: cone.rs  cube.rs  cylinder.rs  icosphere.rs  mod.rs  plane.rs  sphere.rs  torus.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  gpu.rs  lib.rs  lights.rs  mesh_loader.rs  pipeline.rs  render_style.rs  renderer.rs  texture.rs  vertex.rs
crates/scene/: Cargo.toml
crates/scene/src/: graph.rs  layers.rs  lib.rs  node.rs  serialization.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: agent_progress.rs  command_palette.rs  lib.rs  panels.rs  shortcuts.rs  status_bar.rs  tabs.rs  theme.rs  toolbar.rs
crates/viewport/: Cargo.toml
crates/viewport/src/: camera.rs  gizmo.rs  grid.rs  lib.rs  picking.rs  selection.rs
docs/: ENGINE_DESIGN_REFERENCE.md  ROADMAP.md  UNITS_SYSTEM.md
