[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/render",
    "crates/viewport",
    "crates/ui",
    "crates/scene",
    "crates/assets",
    "crates/inspector",
    "crates/modeling",
    "crates/materials",
    "crates/animation",
    "crates/physics",
    "crates/scripting",
    "crates/plugins",
    "crates/project",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# GPU / Rendering
wgpu = "24.0"
naga = "24.0"
bytemuck = { version = "1.19", features = ["derive"] }

# UI
egui = "0.31"
eframe = { version = "0.31", features = ["wgpu"] }
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_extras = "0.31"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Math
glam = { version = "0.29", features = ["mint", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"

# Asset Loading
gltf = "1.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }

# ECS
hecs = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# File System
notify = "7.0"
walkdir = "2.0"

# Scripting
mlua = { version = "0.10", features = ["luau", "serialize"] }

# Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Async
tokio = { version = "1.44", features = ["rt-multi-thread", "fs", "sync", "macros"] }
pollster = "0.4"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Time
instant = "0.1"

# Misc
parking_lot = "0.12"
crossbeam-channel = "0.5"
indexmap = { version = "2.7", features = ["serde"] }
bitflags = "2.6"
