[package]
name = "assets"
version.workspace = true
edition.workspace = true

[dependencies]
forge_core = { path = "../core", package = "core" }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
gltf = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
