[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
hecs = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
