[package]
name = "materials"
version.workspace = true
edition.workspace = true

[dependencies]
forge_core = { path = "../core", package = "core" }
glam = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
